--- a/res/mae_plot_gui.ui
+++ b/res/mae_plot_gui.ui
@@ -2,24 +2,27 @@
 <ui version="4.0">
  <class>Dialog</class>
  <widget class="QDialog" name="Dialog">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>793</width>
-    <height>535</height>
+    <width>777</width>
+    <height>545</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>770</width>
-     <height>514</height>
+     <width>757</width>
+     <height>522</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -51,7 +54,7 @@
        <enum>Qt::RightToLeft</enum>
       </property>
       <property name="text">
-       <string>Measurements Signals</string>
+       <string>Measurements</string>
       </property>
      </widget>
     </item>
