--- a/res/mae_signalanalysis_gui.ui
+++ b/res/mae_signalanalysis_gui.ui
@@ -111,7 +111,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>440</y>
+     <y>460</y>
      <width>801</width>
      <height>221</height>
     </rect>
@@ -119,7 +119,7 @@
    <property name="currentIndex">
     <number>0</number>
    </property>
-   <widget class="QWidget" name="Page1" native="true">
+   <widget class="QWidget" name="Page1">
     <attribute name="title">
      <string>Mode Estimation</string>
     </attribute>
@@ -464,13 +464,13 @@
     </attribute>
    </widget>
   </widget>
-  <widget class="QGroupBox" name="">
+  <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>90</y>
      <width>804</width>
-     <height>341</height>
+     <height>361</height>
     </rect>
    </property>
    <property name="title">
@@ -550,16 +550,18 @@
       </property>
       <property name="minimumSize">
        <size>
-        <width>470</width>
+        <width>440</width>
         <height>312</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>470</width>
+        <width>440</width>
         <height>312</height>
        </size>
       </property>
+      <zorder>twOutVariable</zorder>
+      <zorder>twOutVariable</zorder>
      </widget>
     </item>
     <item>
