--- a/res/mee_plot_gui.ui
+++ b/res/mee_plot_gui.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>750</width>
-    <height>535</height>
+    <height>547</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>728</width>
-     <height>514</height>
+     <width>732</width>
+     <height>526</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -48,7 +48,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QComboBox" name="cbxMeasurements">
+       <widget class="QComboBox" name="cbxOutputs">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
