--- a/res/mae_signalanalysis_gui.ui
+++ b/res/mae_signalanalysis_gui.ui
@@ -156,7 +156,7 @@
       </widget>
      </item>
      <item row="0" column="1" rowspan="5">
-      <widget class="QTableWidget" name="tableWidget_2">
+      <widget class="QTableWidget" name="tbwAnalysisRes">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
          <horstretch>0</horstretch>
@@ -560,8 +560,6 @@
         <height>312</height>
        </size>
       </property>
-      <zorder>twOutVariable</zorder>
-      <zorder>twOutVariable</zorder>
      </widget>
     </item>
     <item>
@@ -606,7 +604,7 @@
        <enum>QAbstractItemView::SingleSelection</enum>
       </property>
       <property name="selectionBehavior">
-       <enum>QAbstractItemView::SelectColumns</enum>
+       <enum>QAbstractItemView::SelectItems</enum>
       </property>
       <property name="indentation">
        <number>10</number>
