--- a/res/mae_signalanalysis_gui.ui
+++ b/res/mae_signalanalysis_gui.ui
@@ -124,7 +124,7 @@
      <string>Mode Estimation</string>
     </attribute>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="1" rowspan="3">
+     <item row="0" column="1" rowspan="4">
       <widget class="QPushButton" name="btnBasicMethod">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -155,7 +155,7 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1" rowspan="5">
+     <item row="0" column="1" rowspan="6">
       <widget class="QTableWidget" name="tbwAnalysisRes">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -177,37 +177,6 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QPushButton" name="btnBasicMethod">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>96</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="baseSize">
-        <size>
-         <width>96</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Basic</string>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>32</width>
-         <height>32</height>
-        </size>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="2">
       <widget class="QLabel" name="label">
        <property name="text">
@@ -222,6 +191,13 @@
          <width>100</width>
          <height>22</height>
         </size>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QPushButton" name="btn_basicMethod">
+       <property name="text">
+        <string>Ambient Analysis</string>
        </property>
       </widget>
      </item>
