Improvement on the use of matplotlib within the GUI

--- a/res/msv_framework_gui.ui
+++ b/res/msv_framework_gui.ui
@@ -3,7 +3,7 @@
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
   <property name="windowModality">
-   <enum>Qt::ApplicationModal</enum>
+   <enum>Qt::NonModal</enum>
   </property>
   <property name="geometry">
    <rect>
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>wArIspEAcE</string>
+   <string>Dynamics Lab</string>
   </property>
   <property name="iconSize">
    <size>
